--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@next/font": "^14.2.4",
+    "@supabase/supabase-js": "github:supabase/supabase-js",
+    "date-fns": "^3.6.0",
+    "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
