--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@next/font": "^14.2.4",
-    "@supabase/supabase-js": "github:supabase/supabase-js",
+    "@supabase/supabase-js": "^2.42.1",
     "date-fns": "^3.6.0",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
